[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'ts-scan'
version = '1.1.0'
authors = [
    { name='EACG GmbH' }
]
description = 'TrustSource Packages Scanner'
readme = 'README.md'
requires-python = '>=3.10'
classifiers = []
keywords = ['dependencies', 'modules', 'compliance', 'TrustSource']
license = { text = 'Apache-2.0'}

dependencies = [
    'defusedxml',
    'semantic_version',
    'build',
    'importlib-metadata',
    "requests>=2.32.3",
    'numpy',
    'wasabi',
    'ts-deepscan>=2.3.0',
    'license-expression',
    'packageurl-python',
    'spdx-tools>=0.8.2',
    'click==8.1.3',
    'click-params',
    'dataclasses-json',
    'shippinglabel~=2.1.0',
    'tqdm'
]

[project.urls]
Homepage = 'https://github.com/trustsource/ts-scan.git'

[project.scripts]
ts-scan = "ts_scan.cli:start"

[tool.setuptools.packages.find]
where = ['src']

# [tool.setuptools.package-data]
# ts_scan.analyse.gitignore = ['ts_scan/analyse/gitignore/*.gitignore']
